Fixed overflow

--- a/universal.css
+++ b/universal.css
@@ -5,6 +5,7 @@ body {
     color: white;
     font-family: 'Spline Sans', sans-serif;
     text-align: center;
+    overflow: hidden;
 }
 
 #time { height: 45px; }
